--- a/latex/article.tex
+++ b/latex/article.tex
@@ -193,19 +193,26 @@ As the Figure 6 shows, message queue subscribers are able to catch up somewhat f
 
 With a larger message set (Figure 7) the difference becomes even more pronounced in terms of seconds but the ratio stays roughly the same. For failure recovery scenarios it seems that message queues would fare better especially when no assumptions on the workings of the rest of the system can be made.
 
-\begin{figure}
+\begin{figure}[t]
     \centering
     \includegraphics[scale=0.30]{ColdBoot24k.png}
     \caption{24000 messages with 5 millisecond interval, X-axis is in seconds.}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[t]
     \centering
     \includegraphics[scale=0.30]{ColdBoot96k.png}
     \caption{96000 messages with 5 millisecond interval, X-axis is in seconds.}
 \end{figure}
 
 \section{Discussion}
+We have now presented two different perspectives and their respective results to compare publish-subscribe messaging and message queue. The comparison was by no means as thorough as it could have been, but it answers some of the general questions businesses might have when making technological decisions involving both approaches, which was the goal of this research.
+
+In the qualitative analysis we were able to observe useful features that can be attributed to either one of the systems, and it can serve as a basis for future research exploring higher level systems constructed on top of publish-subscribe or message queue. It is also likely that some features are still missing from the results, and further investigation can lead to discovery of new features in either of the systems. It might also be of interest to relax some of the requirements in fault tolerance or dimensions of decoupling to uncover properties that are not attainable under the definitions used by this paper, as real world implementations of the systems are oftentimes extended with features that were deemed necessary but expand the systems beyond this paper's scope.
+
+The performance comparison shines light into typical use cases that are most likely required from the event systems if they end up being chosen. We were able to observe that both systems work under moderate workload of 200 requests per second, and they that can recover from failures. No clear performance leader can be derived from the results, and more research with differing parameters in all parts of the system is required. An interesting area for future research would be investigating how to make the system automatically adjust the parameters (e.g. how many messages subscribers can fetch at once from the message queue) to reach optimal processing of messages.
+
+
 
 \section{Conclusions}
 
